fixed overflow bug

--- a/week04/styles/form.css
+++ b/week04/styles/form.css
@@ -12,5 +12,5 @@ input {
 }
 
 body {
-	overflow: hidden;
+	overflow-x: hidden;
 }
